# 42_minishell

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  minishell.supp
ft_printf/libft/: .gitignore  Makefile  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strcmp.c  gc.c  gc2.c  gc_getline.c  gc_itoa.c  gc_split.c  gc_strdup.c  gc_strjoin.c  gc_strmapi.c  gc_strtrim.c  gc_substr.c  libft.h  stack.c  stack2.c  stack3.c
src/: builtin.c  builtin2.c  builtin3.c  env.c  etc.c  etc2.c  etc3.c  interact.c  interact2.c  interact3.c  lex.c  lex2.c  main.c  minishell.h  parse.c  parse2.c  parse3.c  process.c  process2.c  process3.c
src/bonus/: builtin2_bonus.c  builtin3_bonus.c  builtin_bonus.c  env_bonus.c  etc2_bonus.c  etc3_bonus.c  etc4_bonus.c  etc5_bonus.c  etc_bonus.c  interact2_bonus.c  interact3_bonus.c  interact_bonus.c  lex2_bonus.c  lex3_bonus.c  lex_bonus.c  main_bonus.c  minishell_bonus.h  parse2_bonus.c  parse3_bonus.c  parse4_bonus.c  parse_bonus.c  phrase2_bonus.c  phrase3_bonus.c  phrase4_bonus.c  phrase_bonus.c  process2_bonus.c  process3_bonus.c  process4_bonus.c  process5_bonus.c  process_bonus.c
